--- a/profile.css
+++ b/profile.css
@@ -1,188 +1,116 @@
- 
 
 body {
     font-family: Arial, sans-serif;
+    background-color: #f5f5f5; 
     margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #a9791a;
-  }
-  
+    padding: 20px;
+}
 
-  
-  .profile-nav{
-    background-image: url(slik\ bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: rgba(0,0,0,255);
-    height: 800px;
-    width:500px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 30px;
-    margin-top: 20px;
-    margin-left: 10px;
-  }
+.container {
+    display: flex; 
+    max-width: 1200px;
+    margin: auto;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+}
 
-  .profile-img{
-    height: 150px;
-    width: 150px;
-    background-image: url(Profile\ User\ free\ icons\ designed\ by\ Freepik.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 82px;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    margin-top: 30px;
-  }
+.profile {
+    flex: 2; 
+    margin-right: 20px; 
+}
 
-  .profile-tag{
+.sidebar {
+    flex: 1;  
+    background: #fef8e5; 
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
 
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    width: 50px;
-    color: white;
-    justify-self: center;
-    align-self: center;
-    justify-content: space-evenly;
-    padding-left: 50px;
-    flex-wrap: wrap;
-    font-size: 30px;
-    margin-left: 170px;
-  }
-  .edit-tag{
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    width: 50px;
-    color: white;
-    justify-self: center;
-    align-self: center;
-    justify-content: space-evenly;
-    padding-left: 50px;
-    font-size: 20px;
-    align-self: self-start;
-    margin-left: 175px;
-  
-  }
-  .edit-tag i{
-    padding-top: 30px;
-    padding-left: 5px;
-  }
-  .edit-tag:hover{
-      color: #9a6b0f;
-  }
-  
-  .detail{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    width: 330px;
-    height: 330px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    padding-left: 70px;
-    margin-left: 50px;
-    color: black;
+h1 {
+    text-align: center;
+    color: #9a6b0f;  
+    margin-bottom: 30px;
     font-weight: bold;
-    font-size: medium;
-    background-color: #9a6b0f;
-    border-radius: 30px;
-    margin-top: 20px;
-    border-color: white;
-    border-width: 5px;
-    padding-top: 10px;
-    
-  }
-  .logout{
+    font-size: 2.5em;  
+}
+
+.profile-header {
     display: flex;
-    justify-content: center;
     align-items: center;
-
-    margin-right: 50px;
-  }
-  .logout button{
-  background-color: white;
-  color: black;
-  border-color: #9a6b0f;
-  margin-right: 60px;
-  }
-  .main-nav{
-    background-image: url(slik\ bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color:black;
-    height: 300px;
-    width: 990px;
-    border-bottom: 10px;
-    border-color: black;
-    border-radius: 40px;
-    margin-left: 10px;
-    margin-top: 20px;
-  }
-.main{
-
-  height: 300px;
-  width: 600px;
-  background-color: transparent;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-  margin-left: 150px;
-}
-button{
-
-  height: 70px;
-  width: 150px;
-  color: white;
-  background-color: black;
-    border-width: 5px;
-    border-color:#9a6b0f ;
-  margin-left: 100px;
-  margin-top: 20px;
-  font-size: 25px;
-  font-weight: bold;
-  border-width: 7px;
-  border-radius: 25px;
-    
-}
-button:hover{
-  background-color:black;
-  color:#9a6b0f;
-  border-color: white;
-}
-.logout button a{
-  text-decoration: none;
-  color: #000;
-  
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(39, 37, 37);  
+    padding-bottom: 20px;
 }
 
-.logout button a:hover{
-  background-color: black;
-  border-width: 5px;
-  color:#9a6b0f;
+.profile-header h2 {
+    margin: 0;
+    color: rgb(39, 37, 37); 
+    font-size: 1.8em;  
 }
-.container{
-  width: 800px;
-  height: 300px;
-  background-color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 20px;
-  border-radius: 30px;
+
+.profile-header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
-.swiper{
-  width: 400px;
-  height: fit-content;
+
+.button {
+    background-color: #9a6b0f;  
+    color: white;
+    border: none;
+    border-radius: 5px; 
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 10px 0; 
+    font-size: 1em;  
+    display: inline-block;  
+    text-align: center;  
+    width: auto;  
 }
-.swiper-slide img {
-  width: 100%;
-  border-radius: 30px;
+
+.button:hover {
+    background-color: #7e5a0b;  
 }
+
+.section {
+    margin: 30px 0;
+    padding: 15px;
+    background-color: #fef8e5;  
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.section h3 {
+    background: rgb(39, 37, 37);  
+    color: white;
+    padding: 12px;
+    border-radius: 5px;
+    text-align: center; 
+}
+
+
+.back-button {
+    background-color: #d9d9d9; 
+    color: rgb(39, 37, 37);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px; 
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 10px 0; 
+    font-size: 1em; 
+    display: block; 
+    text-align: center; 
+    width: auto; 
+}
+
+.back-button:hover {
+    background-color: #b0b0b0;
+}
+
+
+
